Fix for text wrapping on mobile

--- a/style.css
+++ b/style.css
@@ -41,18 +41,16 @@ img {
 }
 
 #main h2 {
-	font-size: 32px;
+	font-size: 28px;
 	display: inline;
-	padding-left: 10%;
-	padding-right: 10%;
+	padding-left: 20px;
+	padding-right: 20px;
 	vertical-align: middle;
 }
-
 .section_header img {
 	display: inline;
 	vertical-align: middle;
 }
-
 #main h3 {
 	font-size: 24px;
 }
@@ -62,8 +60,8 @@ img {
 }
 #center {
 	padding-top: 20px;
-	margin-left: 15%;
-	margin-right: 15%;
+	margin-left: 5%;
+	margin-right: 5%;
 	text-align: center;
 	background: linear-gradient(to right, rgba(0,0,0, 0),
 		rgba(248, 196, 113, 0.8) 20%, rgba(248, 196, 113, 0.8) 80%, rgba(0,0,0, 0) 100%);
@@ -97,5 +95,5 @@ img {
 }
 
 #pre {
-	
+
 }
